--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,11 @@
         box-sizing: border-box;
         font-family: 'Poppins', sans-serif;
       }
+      .jumbotron{
+        border: 4px solid;
+        border-image: linear-gradient(227.91deg,#106AF2 0%, #00E0FF 100%) 1 !important;
+        background-color: rgba(33,37,41,0.5) !important;
+      }
       .erro{
         font-family: 'Poppins', sans-serif;
         color: red;
