--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,9 @@
         text-decoration: none;
         color: navajowhite;
       }
+      .rodape{
+        background: linear-gradient(to left, #00E0FF, #106AF2);
+      }
       .jumbotron{
         padding-left: 50px;
         border: 4px solid;
